# SimpleCOM

./: CMakeLists.txt  README.md  requirements.txt
.github/workflows/: build.yml
src/: __init__.py  main.py  main_window.py  serial_worker.py
